karl package Changelog
======================

Unreleased
----------

- ...

3.33 (2010-05-24)
-----------------

- Work around chameleon bug where the new ``next`` builtin in Python 2.6.x
  was shadowing the value passed from the view, breaking the Twill tests
  (and the reference manual views) under Python 2.6.x (LP #534599).

- Add community and profile statistics to admin UI.

3.32 (2010-05-20)
-----------------

- Fixed bug where lemonade could not determine content type of reference
  manuals.

3.31 (2010-05-20)
-----------------

- Added a hook inside ``karl.models.site.Site.update_indexes`` to allow
  extension or customization packages to extend the set of indexes used
  in the catalog.

- Made the "view all" view work for reference sections (LP #575712).

- Allow nesting of sub-sections within reference sections (LP #575712).
  Also allow adding pages and files at the root of reference manuals, making
  them behave like reference sections.

- The rtf converter now cleans up pict_dir directories left behind
  by rtf2xml (LP #579511).

3.30 (2010-05-06)
-----------------

- Changed wording of title field on file edit screen to remove mention
  of nonexistent checkbox (LP#575789).

- Calendar event, blog entry, newsitem, page, reference add behavior
  tweak (LP#576033).

- Batching in syslog view (LP#563745).

- LP #575276 File view now uses generic layout when outside of a community.

- Removed deprecated code that supported old profile pictures.

- LP #571221 Cache results of file text extraction on the model, to make
  reindexing faster.

3.29 (2010-04-30)
-----------------

- Added an "Any" option at the end of the letterbox to allow clearing
  any existing filter (LP#/570853).

- On each communities sub-view, add a "quick links" panel on the right
  margin, with tabs showing tool links, recent content, and members.
  The last two are fetched on demand using AJAX.  This panel is currently
  disabled unless 'demo' is in the query string. See